--- a/model/model-flow-base/pom.xml
+++ b/model/model-flow-base/pom.xml
@@ -20,6 +20,10 @@
       <groupId>org.opendaylight.mdsal.model</groupId>
       <artifactId>opendaylight-l2-types</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowjava</groupId>
+      <artifactId>openflow-protocol-api</artifactId>
+    </dependency>
   </dependencies>
 
   <scm>
