Bug7485 Make statistics poller parameters configurable.
Currently the the time intervals used for polling the statistics
are harcoded. (basicTimerDelay, maximumTimerDelay).
This patch helps makes parameters more configurable by defining
current default values in yang. Using BluePrint extensions user
can now configure the parameters without changing the source code.

Change-Id: Ic2d694351ee968a6f360e7a218aa17e69c5e9035
Signed-off-by: Sai Marapareddy <sai.marapareddy@gmail.com>

--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -26,3 +26,10 @@ echo-reply-timeout=2000
 #can be changed on demand
 #Turned on by default. Default value is true
 is-statistics-polling-on=true
+#Default value of basic-timer-delay is 3000
+#basic timer delay is the initial delay used in polling the statistics, value is in milliseconds
+basic-timer-delay=3000
+#Default value of maximum-timer-delay is 900000
+#maximum timer delay is the wait time to collect next statistics
+#used in polling the statistics, value is in milliseconds
+maximum-timer-delay=900000
