Bug7485 Make statistics poller parameters configurable.
Currently the the time intervals used for polling the statistics
are harcoded. (basicTimerDelay, maximumTimerDelay).
This patch helps makes parameters more configurable by defining
current default values in yang. Using BluePrint extensions user
can now configure the parameters without changing the source code.

Change-Id: Id06cb1e569b0d3c653c142bf5f5af5a24fd6e3ea
Signed-off-by: Sai Marapareddy <sai.marapareddy@gmail.com>

--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -21,8 +21,15 @@ barrier-interval-timeout-limit=500
 barrier-count-limit=25600
 #Echo reply timeout specified on the controller side beyond which the connection is deemed dead
 #Default value is set to 2000 milliseconds
-echo-reply-timeout=2000
+echo-reply-timeout=2003
 #flag to turn on/off statistics polling
 #can be changed on demand
 #Turned on by default. Default value is true
 is-statistics-polling-on=true
+#Default value of basic-timer-delay is 3000
+#basic timer delay is the initial delay used in polling the statistics, value is in milliseconds
+basic-timer-delay=3003
+#Default value of maximum-timer-delay is 900000
+#maximum timer delay is the wait time to collect next statistics
+#used in polling the statistics, value is in milliseconds
+maximum-timer-delay=900003
