--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -33,3 +33,9 @@ basic-timer-delay=3000
 #maximum timer delay is the wait time to collect next statistics
 #used in polling the statistics, value is in milliseconds
 maximum-timer-delay=900000
+#TTL in milliseconds without connection before the context chain shall be dropped
+ttl-before-drop=10000
+#TTL step in milliseconds
+ttl-step=1000
+#if true then context chain will not be dropped, otherwise use ttl-before-drop
+never-drop-contexts-on=false
