Fix several issues with disconecting device
Change-Id: I29a0b08643fce88599a1d3e76d0f382369127780
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>

--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -26,3 +26,9 @@ echo-reply-timeout=2000
 #can be changed on demand
 #Turned on by default. Default value is true
 is-statistics-polling-on=true
+#TTL in milliseconds without connection before the context chain shall be dropped
+ttl-before-drop=10000
+#TTL step in milliseconds
+ttl-step=1000
+#if true then context chain will not be dropped, otherwise use ttl-before-drop
+never-drop-contexts-on=false
