--- a/features-he/pom.xml
+++ b/features-he/pom.xml
@@ -20,7 +20,7 @@
         <mdsal.version>1.5.0-SNAPSHOT</mdsal.version>
         <openflowjava.version>0.9.0-SNAPSHOT</openflowjava.version>
         <openflowplugin.version>0.4.0-SNAPSHOT</openflowplugin.version>
-        <dlux.version>0.5.0-SNAPSHOT</dlux.version>
+        <dluxapps.version>0.5.0-SNAPSHOT</dluxapps.version>
         <lldp.version>0.12.0-SNAPSHOT</lldp.version>
         <config.configfile.directory>etc/opendaylight/karaf</config.configfile.directory>
         <restconf.version>1.5.0-SNAPSHOT</restconf.version>
@@ -159,9 +159,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.opendaylight.dlux</groupId>
-            <artifactId>features-dlux</artifactId>
-            <version>${dlux.version}</version>
+            <groupId>org.opendaylight.dluxapps</groupId>
+            <artifactId>features-dluxapps</artifactId>
+            <version>${dluxapps.version}</version>
             <classifier>features</classifier>
             <type>xml</type>
         </dependency>
