Add module and feature for ONF extensions
Change-Id: I5d983bfa5f01b98efd68d8094e519fa50905dce7
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -53,6 +53,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>openflowplugin-extension-onf</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>openflowjava-extension-nicira</artifactId>
                 <version>${project.version}</version>
             </dependency>
