--- a/extension/features/pom.xml
+++ b/extension/features/pom.xml
@@ -64,6 +64,12 @@
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>openflowjava-extension-nicira</artifactId>
     </dependency>
+
+    <!-- ONF extensions -->
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin</groupId>
+      <artifactId>openflowplugin-extension-onf</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
