--- a/extension/features-extension-aggregator/odl-openflowplugin-onf-extensions/pom.xml
+++ b/extension/features-extension-aggregator/odl-openflowplugin-onf-extensions/pom.xml
@@ -4,31 +4,35 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>feature-repo-parent</artifactId>
+        <artifactId>single-feature-parent</artifactId>
         <version>1.8.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.openflowplugin</groupId>
-    <artifactId>features4-openflowplugin-extension</artifactId>
+    <artifactId>odl-openflowplugin-onf-extensions</artifactId>
     <packaging>feature</packaging>
     <version>0.4.0-SNAPSHOT</version>
 
+    <name>OpenDaylight :: Openflow Plugin :: ONF Extensions</name>
+
     <dependencies>
+        <!-- feature dependencies -->
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>odl-openflowplugin-nxm-extensions</artifactId>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>odl-openflowplugin-southbound</artifactId>
             <version>${project.version}</version>
-            <type>xml</type>
             <classifier>features</classifier>
+            <type>xml</type>
         </dependency>
+
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>odl-openflowplugin-onf-extensions</artifactId>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin-extension-onf</artifactId>
             <version>${project.version}</version>
-            <type>xml</type>
-            <classifier>features</classifier>
         </dependency>
+
     </dependencies>
+
 
 </project>
