Add ONF extension provider and wire via blueprint w/OFP
Reference: ONF approved extension #230
Resolves: Bug 6806

Change-Id: I49d08c82d4b973b888939aff2a4cd110289c9fe3
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>

--- a/extension/openflowplugin-extension-onf/pom.xml
+++ b/extension/openflowplugin-extension-onf/pom.xml
@@ -38,7 +38,7 @@
                             <yangFilesRootDir>src/main/yang</yangFilesRootDir>
                             <codeGenerators>
                                 <generator>
-                                    <codeGeneratorClass>org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl</codeGeneratorClass>
+                                    <codeGeneratorClass>org.opendaylight.mdsal.binding.maven.api.gen.plugin.CodeGeneratorImpl</codeGeneratorClass>
                                     <outputBaseDir>${project.build.directory}/generated-sources/sal</outputBaseDir>
                                 </generator>
                             </codeGenerators>
@@ -63,5 +63,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>openflowplugin-extension-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowjava</groupId>
+            <artifactId>openflow-protocol-spi</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
