Add ONF extension provider and wire via blueprint w/OFP
Reference: ONF approved extension #230
Resolves: Bug 6806

Change-Id: I49d08c82d4b973b888939aff2a4cd110289c9fe3
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>

--- a/extension/features-extension-aggregator/odl-openflowplugin-onf-extensions/pom.xml
+++ b/extension/features-extension-aggregator/odl-openflowplugin-onf-extensions/pom.xml
@@ -27,6 +27,20 @@
         </dependency>
 
         <dependency>
+            <groupId>org.opendaylight.openflowjava</groupId>
+            <artifactId>odl-openflowjava-protocol</artifactId>
+            <version>${openflowjava.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin-extension-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
             <artifactId>openflowplugin-extension-onf</artifactId>
             <version>${project.version}</version>
