--- a/applications/bulk-o-matic/pom.xml
+++ b/applications/bulk-o-matic/pom.xml
@@ -40,7 +40,7 @@
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
