--- a/extension/openflowjava-extension-nicira-api/pom.xml
+++ b/extension/openflowjava-extension-nicira-api/pom.xml
@@ -89,7 +89,7 @@
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
