Add Karaf 4 features.
Change-Id: I31781439d7b5cba76f6e6a52109b13b2546ee924
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>
Signed-off-by: Stephen Kitt <skitt@redhat.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -18,8 +18,8 @@
         <module>openflowplugin-extension-api</module>
         <module>openflowplugin-extension-nicira</module>
         <module>openflowplugin-extension-nicira-config</module>
-        <module>features-he</module>
-        <module>features</module>
         <module>test-extension</module>
+        <module>features-extension-aggregator</module>
+        <module>features-he-extension-aggregator</module>
     </modules>
 </project>
