--- a/features-he/odl-openflowplugin-all-he/pom.xml
+++ b/features-he/odl-openflowplugin-all-he/pom.xml
@@ -4,32 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>odlparent-lite</artifactId>
+        <artifactId>features-parent</artifactId>
         <version>1.8.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>org.opendaylight.openflowplugin</groupId>
-    <artifactId>features-aggregator-he</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>odl-openflowplugin-all-he</artifactId>
+    <packaging>feature</packaging>
     <version>0.4.0-SNAPSHOT</version>
-
-    <modules>
-        <module>features-openflowplugin-he</module>
-        <module>features4-openflowplugin-he</module>
-        <module>odl-openflowplugin-all-he</module>
-        <module>odl-openflowplugin-southbound-he</module>
-        <module>odl-openflowplugin-flow-services-he</module>
-        <module>odl-openflowplugin-nsf-services-he</module>
-        <module>odl-openflowplugin-nsf-model-he</module>
-        <module>odl-openflowplugin-app-bulk-o-matic-he</module>
-        <module>odl-openflowplugin-app-lldp-speaker-he</module>
-        <module>odl-openflowplugin-app-config-pusher-he</module>
-        <module>odl-openflowplugin-app-table-miss-enforcer-he</module>
-        <module>odl-openflowplugin-drop-test-he</module>
-        <module>odl-openflowplugin-flow-services-ui-he</module>
-        <module>odl-openflowplugin-flow-services-rest-he</module>
-    </modules>
 
     <properties>
         <yangtools.version>1.1.0-SNAPSHOT</yangtools.version>
