Add Karaf 4 features.
Change-Id: I31781439d7b5cba76f6e6a52109b13b2546ee924
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>

--- a/openflowplugin-impl/pom.xml
+++ b/openflowplugin-impl/pom.xml
@@ -11,6 +11,10 @@
     <artifactId>openflowplugin-impl</artifactId>
     <packaging>bundle</packaging>
 
+    <properties>
+        <karaf.version>4.0.8</karaf.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -126,7 +130,6 @@
         <dependency>
             <groupId>org.apache.karaf.shell</groupId>
             <artifactId>org.apache.karaf.shell.console</artifactId>
-            <version>${karaf.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
