--- a/test-common/pom.xml
+++ b/test-common/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-binding-api</artifactId>
+            <!--<version>${mdsal.version}</version>-->
         </dependency>
         <dependency>
             <groupId>org.opendaylight.openflowplugin.model</groupId>
