Add Karaf 4 features.
Change-Id: I31781439d7b5cba76f6e6a52109b13b2546ee924
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>
Signed-off-by: Stephen Kitt <skitt@redhat.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/extension/features-he-extension-aggregator/features-openflowplugin-extension-he/pom.xml
+++ b/extension/features-he-extension-aggregator/features-openflowplugin-extension-he/pom.xml
@@ -34,7 +34,7 @@
     <!-- feature dependencies -->
     <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
-      <artifactId>features-openflowplugin-he</artifactId>
+      <artifactId>features-openflowplugin</artifactId>
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
