Add Karaf 4 features.
Change-Id: I31781439d7b5cba76f6e6a52109b13b2546ee924
Signed-off-by: Jozef Bacigal <jozef.bacigal@pantheon.tech>
Signed-off-by: Stephen Kitt <skitt@redhat.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/extension/features-he-extension-aggregator/features-he-openflowplugin-extension/pom.xml
+++ b/extension/features-he-extension-aggregator/features-he-openflowplugin-extension/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.opendaylight.openflowplugin</groupId>
   <version>0.4.0-SNAPSHOT</version>
-  <artifactId>features-openflowplugin-extension-he</artifactId>
+  <artifactId>features-he-openflowplugin-extension</artifactId>
 
   <packaging>jar</packaging>
 
@@ -34,7 +34,7 @@
     <!-- feature dependencies -->
     <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
-      <artifactId>features-openflowplugin-he</artifactId>
+      <artifactId>features-openflowplugin</artifactId>
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
