BUG 6893: New command OFPGC_ADD_OR_MOD for OFPT_GROUP_MOD
New command OFPGC_ADD_OR_MOD for OFPT_GROUP_MOD which adds a new group if
it doesn't exists or modifies an existing group.

Change-Id: I0f55dae087970319a6c448c46fd689191c22a589
Signed-off-by: D Arunprakash <d.arunprakash@ericsson.com>

--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -33,3 +33,5 @@ basic-timer-delay=3000
 #maximum timer delay is the wait time to collect next statistics
 #used in polling the statistics, value is in milliseconds
 maximum-timer-delay=900000
+#To enable support for OFPGC_ADD_OR_MOD
+group.add.mod.command.support=true
