--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -34,8 +34,8 @@ basic-timer-delay=3000
 #used in polling the statistics, value is in milliseconds
 maximum-timer-delay=900000
 #TTL in milliseconds without connection before the context chain shall be dropped
-ttl-before-drop=10000
-#TTL step in milliseconds
+ttl-before-drop=1000
+#TTL step in milliseconds, if ttl-before-drop equals ttl-step it will be released in first step
 ttl-step=1000
 #if true then context chain will not be dropped, otherwise use ttl-before-drop
 never-drop-contexts-on=false
