Add configuration knob for Single Layer
Add configuration knob to openflowplugin.cfg that will enable/disable
use-single-layer-serialization.

Change-Id: I9473a80495060aaa252757ba4d0b1450d252b08e
Signed-off-by: Tomas Slusny <tomas.slusny@pantheon.tech>

--- a/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
+++ b/openflowplugin-blueprint-config/src/main/resources/initial/openflowplugin.cfg
@@ -33,3 +33,4 @@ basic-timer-delay=3000
 #maximum timer delay is the wait time to collect next statistics
 #used in polling the statistics, value is in milliseconds
 maximum-timer-delay=900000
+use-single-layer-serialization=true
