Add missing <name> fields for pom.xml files
This is used by autorelease scripts to automatically parse which project
is failing a build and report to the mailing list automatically. We need
names in the format:

    ODL :: <groupId> :: <artifactId>

This patch formats in the same format as found in the startup archetypes
patch found here: https://git.opendaylight.org/gerrit/52522

Change-Id: I7e69bbc719bee4bf6171090c3d958b62165249d9
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/extension/openflowplugin-extension-nicira/pom.xml
+++ b/extension/openflowplugin-extension-nicira/pom.xml
@@ -11,14 +11,17 @@
 
     <artifactId>openflowplugin-extension-nicira</artifactId>
     <packaging>bundle</packaging>
-    
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-maven-plugin</artifactId>
@@ -114,7 +117,7 @@
             <groupId>org.opendaylight.openflowjava</groupId>
             <artifactId>openflow-protocol-api</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
