--- a/extension/test-extension/pom.xml
+++ b/extension/test-extension/pom.xml
@@ -9,16 +9,19 @@
     <relativePath>../</relativePath>
   </parent>
   <artifactId>test-extension</artifactId>
-  
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
   <packaging>bundle</packaging>
-    
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yang-maven-plugin</artifactId>
@@ -71,7 +74,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
@@ -115,6 +118,6 @@
             <artifactId>openflow-protocol-api</artifactId>
         </dependency>
     </dependencies>
-    
-    
+
+
 </project>
