--- a/applications/features/pom.xml
+++ b/applications/features/pom.xml
@@ -12,6 +12,9 @@
   <version>0.4.0-SNAPSHOT</version>
   <artifactId>features-flow</artifactId>
   <packaging>jar</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <properties>
     <yangtools.version>1.1.0-SNAPSHOT</yangtools.version>
