--- a/applications/notification-supplier/pom.xml
+++ b/applications/notification-supplier/pom.xml
@@ -11,6 +11,10 @@
     <groupId>org.opendaylight.openflowplugin.applications</groupId>
     <artifactId>notification-supplier</artifactId>
     <packaging>bundle</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
