--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -10,9 +10,11 @@
     </parent>
 
     <artifactId>applications</artifactId>
-    <name>applications</name>
     <url>http://maven.apache.org</url>
     <packaging>pom</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <build>
         <pluginManagement>
