--- a/applications/statistics-manager/pom.xml
+++ b/applications/statistics-manager/pom.xml
@@ -9,6 +9,9 @@
   <groupId>org.opendaylight.openflowplugin.applications</groupId>
   <artifactId>statistics-manager</artifactId>
   <packaging>bundle</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <dependencies>
     <dependency>
