--- a/applications/topology-lldp-discovery/pom.xml
+++ b/applications/topology-lldp-discovery/pom.xml
@@ -11,6 +11,9 @@
   <artifactId>topology-lldp-discovery</artifactId>
   <version>0.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <dependencyManagement>
     <dependencies>
