--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -22,6 +22,9 @@
     <artifactId>openflowplugin-artifacts</artifactId>
     <version>0.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <dependencyManagement>
         <dependencies>
