--- a/distribution/karaf/pom.xml
+++ b/distribution/karaf/pom.xml
@@ -11,6 +11,10 @@
   <artifactId>openflowplugin-karaf</artifactId>
   <version>0.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
   <prerequisites>
     <maven>3.0</maven>
   </prerequisites>
