--- a/extension/features-extension-aggregator/features-openflowplugin-extension/pom.xml
+++ b/extension/features-extension-aggregator/features-openflowplugin-extension/pom.xml
@@ -10,6 +10,9 @@
   <groupId>org.opendaylight.openflowplugin</groupId>
   <version>0.4.0-SNAPSHOT</version>
   <artifactId>features-openflowplugin-extension</artifactId>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <packaging>jar</packaging>
 
