--- a/extension/features-he-extension-aggregator/features-openflowplugin-extension-he/pom.xml
+++ b/extension/features-he-extension-aggregator/features-openflowplugin-extension-he/pom.xml
@@ -12,6 +12,9 @@
   <artifactId>features-openflowplugin-extension-he</artifactId>
 
   <packaging>jar</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <properties>
     <openflowplugin.version>0.4.0-SNAPSHOT</openflowplugin.version>
