--- a/extension/features-he-extension-aggregator/features4-openflowplugin-extension-he/pom.xml
+++ b/extension/features-he-extension-aggregator/features4-openflowplugin-extension-he/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>features4-openflowplugin-extension-he</artifactId>
     <packaging>feature</packaging>
     <version>0.4.0-SNAPSHOT</version>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <dependencies>
         <dependency>
