--- a/extension/features-he-extension-aggregator/pom.xml
+++ b/extension/features-he-extension-aggregator/pom.xml
@@ -14,6 +14,9 @@
     <artifactId>features-he-extension-aggregator</artifactId>
     <packaging>pom</packaging>
     <version>0.4.0-SNAPSHOT</version>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <modules>
         <module>features-openflowplugin-extension-he</module>
