--- a/extension/openflowjava-extension-nicira-api/pom.xml
+++ b/extension/openflowjava-extension-nicira-api/pom.xml
@@ -11,6 +11,9 @@
     </parent>
     <artifactId>openflowjava-extension-nicira-api</artifactId>
     <packaging>bundle</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <build>
         <plugins>
