--- a/extension/openflowplugin-extension-nicira-config/pom.xml
+++ b/extension/openflowplugin-extension-nicira-config/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>openflowplugin-extension-nicira-config</artifactId>
     <description>Controller Configuration files for Nicira extensions</description>
     <packaging>jar</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
     <build>
       <plugins>
           <plugin>
