--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -12,6 +12,10 @@
 
     <artifactId>openflowplugin-extension-parent</artifactId>
     <packaging>pom</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
     <modules>
         <module>openflowjava-extension-nicira-api</module>
         <module>openflowjava-extension-nicira</module>
