--- a/features-he-aggregator/features-openflowplugin-he/pom.xml
+++ b/features-he-aggregator/features-openflowplugin-he/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>features-openflowplugin-he</artifactId>
     <packaging>pom</packaging>
     <version>0.4.0-SNAPSHOT</version>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <properties>
         <yangtools.version>1.1.0-SNAPSHOT</yangtools.version>
