--- a/features-he-aggregator/odl-openflowplugin-flow-services-ui-he/pom.xml
+++ b/features-he-aggregator/odl-openflowplugin-flow-services-ui-he/pom.xml
@@ -14,7 +14,9 @@
     <packaging>feature</packaging>
     <version>0.4.0-SNAPSHOT</version>
 
-    <name>OpenDaylight :: Openflow Plugin :: Flow Services :: UI</name>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <properties>
         <dlux.version>0.5.0-SNAPSHOT</dlux.version>
