--- a/features-he-aggregator/pom.xml
+++ b/features-he-aggregator/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>features-he-aggregator</artifactId>
     <packaging>pom</packaging>
     <version>0.4.0-SNAPSHOT</version>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <modules>
         <module>features-openflowplugin-he</module>
