--- a/model/model-flow-statistics/pom.xml
+++ b/model/model-flow-statistics/pom.xml
@@ -10,6 +10,9 @@
   </parent>
   <artifactId>model-flow-statistics</artifactId>
   <packaging>bundle</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <dependencies>
     <dependency>
