--- a/model/pom.xml
+++ b/model/pom.xml
@@ -12,6 +12,9 @@
   <groupId>org.opendaylight.openflowplugin.model</groupId>
   <artifactId>model-parent</artifactId>
   <packaging>pom</packaging>
+  <!-- <name> formatting is used by autorelease to parse and notify projects on
+       build failure. Please do not modify this unless you have a good reason. -->
+  <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
   <modules>
     <module>model-flow-base</module>
