--- a/openflowplugin-api/pom.xml
+++ b/openflowplugin-api/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>openflowplugin-api</artifactId>
     <packaging>bundle</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+
     <build>
         <plugins>
             <plugin>
