--- a/openflowplugin-blueprint-config-he/pom.xml
+++ b/openflowplugin-blueprint-config-he/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>openflowplugin-blueprint-config-he</artifactId>
     <description>Blueprint configuration for the Helium openflowplugin</description>
     <packaging>bundle</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <build>
       <plugins>
