--- a/openflowplugin-impl/pom.xml
+++ b/openflowplugin-impl/pom.xml
@@ -10,6 +10,9 @@
 
     <artifactId>openflowplugin-impl</artifactId>
     <packaging>bundle</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <build>
         <plugins>
@@ -182,4 +185,3 @@
         </dependency>
     </dependencies>
 </project>
-
