--- a/openflowplugin-it/pom.xml
+++ b/openflowplugin-it/pom.xml
@@ -8,6 +8,9 @@
     </parent>
 
     <artifactId>openflowplugin-it</artifactId>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <build>
         <plugins>
