--- a/openflowplugin/pom.xml
+++ b/openflowplugin/pom.xml
@@ -10,6 +10,9 @@
 
     <artifactId>openflowplugin</artifactId>
     <packaging>bundle</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <build>
         <plugins>
@@ -160,4 +163,3 @@
 
     </dependencies>
 </project>
-
