--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,6 +21,9 @@
     <artifactId>openflowplugin-parent</artifactId>
     <version>0.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
 
     <scm>
         <connection>scm:git:ssh://git.opendaylight.org:29418/openflowplugin.git</connection>
