--- a/samples/sample-consumer/pom.xml
+++ b/samples/sample-consumer/pom.xml
@@ -11,7 +11,10 @@
     <artifactId>sample-consumer</artifactId>
     <version>0.4.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
-
+    <!-- <name> formatting is used by autorelease to parse and notify projects on
+         build failure. Please do not modify this unless you have a good reason. -->
+    <name>ODL :: openflowplugin :: ${project.artifactId}</name>
+    
     <build>
         <plugins>
             <plugin>
@@ -73,4 +76,3 @@
         </dependency>
     </dependencies>
 </project>
-
