BUG-6859 - Binding generator v1 refactoring
Fix compilation failure after binding generator move.

Change-Id: I93a34904054aff4f9f0766ea35a25731adb60e3a
Signed-off-by: Jakub Toth <jatoth@cisco.com>

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -81,15 +81,15 @@
               <yangFilesRootDir>src/main/yang</yangFilesRootDir>
               <codeGenerators>
                 <generator>
-                  <codeGeneratorClass>org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl</codeGeneratorClass>
+                  <codeGeneratorClass>org.opendaylight.mdsal.binding.maven.api.gen.plugin.CodeGeneratorImpl</codeGeneratorClass>
                   <outputBaseDir>${salGeneratorPath}</outputBaseDir>
                 </generator>
                 <generator>
-                  <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
+                  <codeGeneratorClass>org.opendaylight.mdsal.binding.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
                   <outputBaseDir>target/site/models</outputBaseDir>
                 </generator>
                 <generator>
-                  <codeGeneratorClass>org.opendaylight.yangtools.yang.wadl.generator.maven.WadlGenerator</codeGeneratorClass>
+                  <codeGeneratorClass>org.opendaylight.mdsal.binding.yang.wadl.generator.maven.WadlGenerator</codeGeneratorClass>
                   <outputBaseDir>target/site/models</outputBaseDir>
                 </generator>
               </codeGenerators>
