--- a/extension/openflowjava-extension-nicira-api/pom.xml
+++ b/extension/openflowjava-extension-nicira-api/pom.xml
@@ -50,7 +50,7 @@
                                 </generator>
                                 <generator>
                                     <codeGeneratorClass>
-                                        org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
+                                        org.opendaylight.mdsal.binding.maven.api.gen.plugin.CodeGeneratorImpl
                                     </codeGeneratorClass>
                                     <outputBaseDir>${project.build.directory}/generated-sources/sal</outputBaseDir>
                                 </generator>
