Bug 7916: MatchConvertorImpl detailed IllegalStateException instead NPE
This won't fix bug 7916, but perhaps it can help understand the root
cause of it, for a future follow-up actual fix.

Change-Id: I3a006bdc38fec1f2b194a6d9d637c920ddd6b742
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea/
 target/
+target-ide/
 *.class
 *.iml
 **/target
@@ -10,7 +11,6 @@ products
 repository
 workspace
 *~
-target
 .classpath
 .project
 .settings
