Refactor Bundle extension
	- move out bundle from extensions

Change-Id: Ib80c22328d067f16a4c169e7229b825fedd1f3bf
Signed-off-by: miroslav.macko <miroslav.macko@pantheon.tech>

--- a/features-aggregator/features-openflowplugin/pom.xml
+++ b/features-aggregator/features-openflowplugin/pom.xml
@@ -134,6 +134,10 @@
             <artifactId>model-flow-statistics</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin-extension-onf</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.controller.model</groupId>
             <artifactId>model-inventory</artifactId>
         </dependency>
