--- a/features-aggregator/features4-openflowplugin/pom.xml
+++ b/features-aggregator/features4-openflowplugin/pom.xml
@@ -106,6 +106,13 @@
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>odl-openflowplugin-extension-onf</artifactId>
+            <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
     </dependencies>
 
 </project>
