--- a/features-aggregator/odl-openflowplugin-flow-services/pom.xml
+++ b/features-aggregator/odl-openflowplugin-flow-services/pom.xml
@@ -38,6 +38,13 @@
             <classifier>features</classifier>
             <type>xml</type>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>odl-openflowplugin-extension-onf</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
     </dependencies>
 
 </project>
