--- a/features-aggregator/odl-openflowplugin-extension-onf/pom.xml
+++ b/features-aggregator/odl-openflowplugin-extension-onf/pom.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) 2017 Pantheon Technologies s.r.o. and others.  All rights reserved.
+  ~
+  ~ This program and the accompanying materials are made available under the
+  ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
+  ~ and is available at http://www.eclipse.org/legal/epl-v10.html
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -10,11 +18,11 @@
     </parent>
 
     <groupId>org.opendaylight.openflowplugin</groupId>
-    <artifactId>odl-openflowplugin-onf-extensions</artifactId>
+    <artifactId>odl-openflowplugin-extension-onf</artifactId>
     <packaging>feature</packaging>
     <version>0.4.0-SNAPSHOT</version>
 
-    <name>OpenDaylight :: Openflow Plugin :: ONF Extensions</name>
+    <name>OpenDaylight :: Openflow Plugin :: OpenNetworking Foundation Extensions</name>
 
     <properties>
         <openflowjava.version>0.9.0-SNAPSHOT</openflowjava.version>
@@ -23,7 +31,7 @@
     <dependencies>
         <!-- feature dependencies -->
         <dependency>
-            <groupId>org.opendaylight.openflowplugin</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>odl-openflowplugin-southbound</artifactId>
             <version>${project.version}</version>
             <classifier>features</classifier>
@@ -37,6 +45,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
