--- a/openflowplugin-common/pom.xml
+++ b/openflowplugin-common/pom.xml
@@ -14,11 +14,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
@@ -28,6 +23,7 @@
     </dependency>
 
     <dependency>
+      <!-- FIXME: configure slf4j-simple instead -->
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <scope>test</scope>
